// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements HttpOperationBindingElement given query field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(HttpOperationBindingElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements HttpOperationBindingElement should refract to semantic ApiDOM tree 1`] = `
(HttpOperationBindingElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
